cursor fix to prevent vertical overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,7 +44,7 @@ img {
 .cursor-outer,
 .cursor-inner {
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   top: -50%;
   left: -50%;
   z-index: 50;
